--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         @import url('https://fonts.googleapis.com/css2?family=Yanone+Kaffeesatz:wght@200&display=swap');
     </style>
 
-    <link rel="stylesheet" href="./navBar.css">
+    <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
